--- a/Desktop/blogPostDjango-master/templates/base.html
+++ b/Desktop/blogPostDjango-master/templates/base.html
@@ -63,10 +63,67 @@
           <a href="#" class="btn btn-danger">
           <span class="glyphicon glyphicon-off"></span> Log Out
           </a>
-
+          <button type="button" class="btn btn-default btn-lg" id="regBtn">Registration</button>
           <button type="button" class="btn btn-default btn-lg" id="myBtn">Login</button>
       </div>
-<!-- Modal -->
+
+
+
+      <!-- Modal Registration-->
+  <div class="modal fade" id="modalReg" role="dialog">
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header" style="padding:35px 50px;">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4><span class="glyphicon glyphicon-lock"></span> Registration</h4>
+        </div>
+        <div class="modal-body" style="padding:40px 50px;">
+          <form role="form" method="POST" class="UserForm" action="http://127.0.0.1:8000/home/reg/"> {% csrf_token %}
+              {{ regiform.as_p }}
+            {% comment %}<div class="form-group">
+              <label for="usrname"><span class="glyphicon glyphicon-user"></span> Username</label>
+              <input type="text" class="form-control" id="usrname" placeholder="User Name">
+            </div>
+               <div class="form-group">
+              <label for="usrname"><span class="glyphicon glyphicon-earphone"></span> Phone Number</label>
+              <input type="text" class="form-control" id="phone" placeholder="Phone (+880 1XXX)">
+            </div>
+               <div class="form-group">
+              <label for="usrname"><span class="glyphicon glyphicon-home"></span> Living Address</label>
+              <input type="text" class="form-control" id="usrname" placeholder="Enter address">
+            </div>
+              <div class="form-group">
+              <label for="usrname"><span class="glyphicon glyphicon-briefcase"></span> Ocupation</label>
+              <input type="text" class="form-control" id="occupation" placeholder="Your occupation here">
+            </div>
+               <div class="form-group">
+              <label for="usrname"><span class="glyphicon glyphicon-envelope"></span> Email</label>
+              <input type="email" class="form-control" id="email" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+              <label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Password</label>
+              <input type="password" class="form-control" id="psw" placeholder="Enter password">
+            </div>
+{% endcomment %}
+              <input type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"></span> Registration</input>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+
+        </div>
+      </div>
+
+    </div>
+</div>
+
+
+
+
+
+<!-- Modal Login-->
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
 
@@ -77,10 +134,10 @@
           <h4><span class="glyphicon glyphicon-lock"></span> Login</h4>
         </div>
         <div class="modal-body" style="padding:40px 50px;">
-          <form role="form">
+          <form role="form" method="POST" action="">
             <div class="form-group">
-              <label for="usrname"><span class="glyphicon glyphicon-user"></span> Username</label>
-              <input type="text" class="form-control" id="usrname" placeholder="Enter email">
+              <label for="usrname"><span class="glyphicon glyphicon-envelope"></span> Email</label>
+              <input type="email" class="form-control" id="email" placeholder="Enter your registered email">
             </div>
             <div class="form-group">
               <label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Password</label>
@@ -89,12 +146,11 @@
             <div class="checkbox">
               <label><input type="checkbox" value="" checked>Remember me</label>
             </div>
-              <button type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"></span> Login</button>
+              <button type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-log-in"></span> Login</button>
           </form>
         </div>
         <div class="modal-footer">
           <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
-          <p>Not a member? <a href="#">Sign Up</a></p>
           <p>Forgot <a href="#">Password?</a></p>
         </div>
       </div>
@@ -106,6 +162,14 @@
 $(document).ready(function(){
     $("#myBtn").click(function(){
         $("#myModal").modal();
+    });
+});
+</script>
+
+      <script>
+$(document).ready(function(){
+    $("#regBtn").click(function(){
+        $("#modalReg").modal();
     });
 });
 </script>
@@ -146,14 +210,13 @@ $(document).ready(function(){
 
             </div>
             <div class="col-sm-8 text-left">
-              <h1>Welcome</h1>
+              <h1>Welcome to E-newsPaper</h1>
 
-                <h2>All Post List</h2>
+                <h2>All NewsPaper List (Demo)</h2>
          {% block content %}
          {% endblock %}
 
 
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               <hr>
 
             </div>
