--- a/Desktop/blogPostDjango-master/templates/base.html
+++ b/Desktop/blogPostDjango-master/templates/base.html
@@ -37,6 +37,13 @@
       <div class="container">
          <div class="page-header page-header-custom">
             <h1 class="text-center">The Soft Tech Bangladesh</h1>
+
+             <p class="text-center" id="currentDate"></p>
+             <script type="text/javascript">
+
+                    document.getElementById("currentDate").innerHTML = Date();
+
+            </script>
          </div>
 
       <div class="btn-group">
@@ -209,7 +216,7 @@ $(document).ready(function(){
             </nav>
 
             </div>
-            <div class="col-sm-8 text-left">
+              <div class="col-sm-8 text-left" >
               <h1>Welcome to E-newsPaper</h1>
 
                 <h2>All NewsPaper List (Demo)</h2>
