--- a/Desktop/blogPostDjango-master/templates/index.html
+++ b/Desktop/blogPostDjango-master/templates/index.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
    {% block content %}
       {% for post in all_post_list %}
-         <h3>{{ post.title }}</h3>
-         <hr>
-         <p>{{ post.description }}</p>
+         {{ post }}
       {% endfor %}
    {% endblock %}
