--- a/Desktop/blogPostDjango-master/templates/registration.html
+++ b/Desktop/blogPostDjango-master/templates/registration.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
    {% block content %}
             <form method="POST"> {% csrf_token %}
-        {{ form.as_p }}
+        {{ regiform.as_p }}
             <input type="submit" value="Registration">
 
    {% endblock %}
