--- a/Desktop/blogPostDjango-master/templates/single_post.html
+++ b/Desktop/blogPostDjango-master/templates/single_post.html
@@ -2,4 +2,7 @@
    {% block content %}
       <h2>{{ post.title }}</h2>
       <p>{{ post.description }}</p>
+       {% if post.image != None %}
+            <img src="{{ post.image.url }}" width="650">
+       {% endif %}
    {% endblock %}
