--- a/Desktop/blogPostDjango-master/templates/base.html
+++ b/Desktop/blogPostDjango-master/templates/base.html
@@ -13,8 +13,10 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+       <link href="{% static 'css/custom.css' %}" rel="stylesheet">
       <script src="{% static 'js/bootstrap.min.js' %}"></script>
       <link rel="stylesheet" href="{% static 'style.css' %}">
+
 
        <style>
            .modal-header, h4, .close {
@@ -47,84 +49,87 @@
          </div>
 
       <div class="btn-group">
-            <button type="button" class="btn btn-primary">About</button>
-            <button type="button" class="btn btn-primary">Contact</button>
-            <button type="button" class="btn btn-primary">Advertisement</button>
-            <button type="button" class="btn btn-primary">Demo Button</button>
-            <button type="button" class="btn btn-success">Success Demo Button</button>
-             <form class="navbar-form navbar-left" action="/action_page.py">
+
+          <a href="/home/e_news/" class="btn btn-success">Home</a>
+          <a href="/home/post_list/" class="btn btn-success">About</a>
+          <a href="/home/post_list/" class="btn btn-success">Contact</a>
+
+             <form method="GET" class="navbar-form navbar-left" action="/home/post_list/">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search" name="search">
+                <input type="text" class="form-control" placeholder="Search" name="q">
               </div>
-              <button type="submit" class="btn btn-default">Submit</button>
+              <input type="submit" value="Search" class="btn btn-default">
             </form>
 
 	  	</div>
 
       <div style="float: right">
 
-          <a href="/admin/" class="btn btn-info">
+          <a href="/home/registration/" class="btn btn-info">
+          <span class="glyphicon glyphicon-user"></span> Registration
+          </a>
+          <a href="/home/login/" class="btn btn-info">
           <span class="glyphicon glyphicon-user"></span> Log In
           </a>
 
           <a href="#" class="btn btn-danger">
           <span class="glyphicon glyphicon-off"></span> Log Out
           </a>
-          <button type="button" class="btn btn-default btn-lg" id="regBtn">Registration</button>
-          <button type="button" class="btn btn-default btn-lg" id="myBtn">Login</button>
+{#          <button type="button" action="/registration" class="btn btn-default btn-lg" id="regBtn">Registration</button>#}
+{#          <button type="button" class="btn btn-default btn-lg" id="myBtn">Login</button>#}
       </div>
 
 
 
-      <!-- Modal Registration-->
-  <div class="modal fade" id="modalReg" role="dialog">
-    <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header" style="padding:35px 50px;">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4><span class="glyphicon glyphicon-lock"></span> Registration</h4>
-        </div>
-        <div class="modal-body" style="padding:40px 50px;">
-          <form role="form" method="POST" class="UserForm" action="http://127.0.0.1:8000/home/reg/"> {% csrf_token %}
-              {{ regiform.as_p }}
-            {% comment %}<div class="form-group">
-              <label for="usrname"><span class="glyphicon glyphicon-user"></span> Username</label>
-              <input type="text" class="form-control" id="usrname" placeholder="User Name">
-            </div>
-               <div class="form-group">
-              <label for="usrname"><span class="glyphicon glyphicon-earphone"></span> Phone Number</label>
-              <input type="text" class="form-control" id="phone" placeholder="Phone (+880 1XXX)">
-            </div>
-               <div class="form-group">
-              <label for="usrname"><span class="glyphicon glyphicon-home"></span> Living Address</label>
-              <input type="text" class="form-control" id="usrname" placeholder="Enter address">
-            </div>
-              <div class="form-group">
-              <label for="usrname"><span class="glyphicon glyphicon-briefcase"></span> Ocupation</label>
-              <input type="text" class="form-control" id="occupation" placeholder="Your occupation here">
-            </div>
-               <div class="form-group">
-              <label for="usrname"><span class="glyphicon glyphicon-envelope"></span> Email</label>
-              <input type="email" class="form-control" id="email" placeholder="Enter email">
-            </div>
-            <div class="form-group">
-              <label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Password</label>
-              <input type="password" class="form-control" id="psw" placeholder="Enter password">
-            </div>
-{% endcomment %}
-              <input type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"></span> Registration</input>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
-
-        </div>
-      </div>
-
-    </div>
-</div>
+{#      <!-- Modal Registration-->#}
+{#  <div class="modal fade" id="modalReg" role="dialog">#}
+{#    <div class="modal-dialog">#}
+{##}
+{#      <!-- Modal content-->#}
+{#      <div class="modal-content">#}
+{#        <div class="modal-header" style="padding:35px 50px;">#}
+{#          <button type="button" class="close" data-dismiss="modal">&times;</button>#}
+{#          <h4><span class="glyphicon glyphicon-lock"></span> Registration</h4>#}
+{#        </div>#}
+{#        <div class="modal-body" style="padding:40px 50px;">#}
+{#          <form role="form" method="POST" name="RForm" class="UserForm" action="http://127.0.0.1:8000/home/reg/"> {% csrf_token %}#}
+{#              {{ regiform.as_p }}#}
+{#            <div class="form-group">#}
+{#              <label for="usrname"><span class="glyphicon glyphicon-user"></span> Username</label>#}
+{#              <input type="text" class="form-control" id="usrname" placeholder="User Name">#}
+{#            </div>#}
+{#               <div class="form-group">#}
+{#              <label for="usrname"><span class="glyphicon glyphicon-earphone"></span> Phone Number</label>#}
+{#              <input type="text" class="form-control" id="phone" placeholder="Phone (+880 1XXX)">#}
+{#            </div>#}
+{#               <div class="form-group">#}
+{#              <label for="usrname"><span class="glyphicon glyphicon-home"></span> Living Address</label>#}
+{#              <input type="text" class="form-control" id="usrname" placeholder="Enter address">#}
+{#            </div>#}
+{#              <div class="form-group">#}
+{#              <label for="usrname"><span class="glyphicon glyphicon-briefcase"></span> Ocupation</label>#}
+{#              <input type="text" class="form-control" id="occupation" placeholder="Your occupation here">#}
+{#            </div>#}
+{#               <div class="form-group">#}
+{#              <label for="usrname"><span class="glyphicon glyphicon-envelope"></span> Email</label>#}
+{#              <input type="email" class="form-control" id="email" placeholder="Enter email">#}
+{#            </div>#}
+{#            <div class="form-group">#}
+{#              <label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Password</label>#}
+{#              <input type="password" class="form-control" id="psw" placeholder="Enter password">#}
+{#            </div>#}
+{##}
+{#              <input type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"></span> Registration</input>#}
+{#          </form>#}
+{#        </div>#}
+{#        <div class="modal-footer">#}
+{#          <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>#}
+{##}
+{#        </div>#}
+{#      </div>#}
+{##}
+{#    </div>#}
+{#</div>#}
 
 
 
@@ -190,69 +195,60 @@ $(document).ready(function(){
       <div class="contdr-fluid text-center">
 
 
-        <ul class="pagination">
-          <li class="previous"><a href="#">Previous Page<span class="glyphicon glyphicon-triangle-left" ></span></a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">4</a></li>
-          <li><a href="#">5</a></li>
-          <li><a href="#">6</a></li>
-          <li><a href="#">7</a></li>
-          <li><a href="#">8</a> </li>
-          <li class="next"><a href="#"><span class="glyphicon glyphicon-triangle-right" ></span>Next Page</a></li>
-
-        </ul>
-
 
           <div class="row content">
             <div class="col-sm-2 sidenav">
 
              <nav class="navbar navbar-default navbar-fixed-side" style="height: 100%;">
         <!-- normal collapsible navbar markup -->
-              <p><a href="#">Link</a></p>
-              <p><a href="#">Link</a></p>
-              <p><a href="#">Link</a></p>
+{#                 <form method="GET" action="/home/specify/">#}
+{#                 <h3><a href="{% url 'category' 'education' %}">{{ post.title }}</a></h3>#}
+                 <button type="button" onclick="window.open('/home/e_news_today/?cat=education/')" class="btn btn-primary btn-group-sm btn-block">Education</button>
+                 <button type="button" onclick="window.open('/home/e_news_today/?cat=business/')"  class="btn btn-primary btn-group-sm btn-block">Business</button>
+                 <button type="button" onclick="window.open('/home/e_news_today/?cat=sports/')"  class="btn btn-primary btn-group-sm btn-block">Sports</button>
+                 <button type="button" onclick="window.open('/home/e_news_today/?cat=entertainment/')"  class="btn btn-primary btn-group-sm btn-block">Entertainment</button>
+                 <button type="button" onclick="window.open('/home/e_news_today/?cat=science_technology/')"  class="btn btn-primary btn-group-sm btn-block">Science & Technology</button>
+                 <button type="button" onclick="window.open('/home/e_news_today/?cat=lifestyle/')"  class="btn btn-primary btn-group-sm btn-block">Lifestyle</button>
+                 <button type="button" onclick="window.open('/home/e_news_today/?cat=comics/')"  class="btn btn-primary btn-group-sm btn-block">Comics</button>
+                 <button type="button" onclick="window.open('/home/e_news_today/?cat=cartoons/')"  class="btn btn-primary btn-group-sm btn-block">Cartoons</button>
+                 <button type="button" onclick="window.open('/home/e_news_today/?cat=jobs/')"  class="btn btn-primary btn-group-sm btn-block">Jobs</button>
+                 <button type="button" onclick="window.open('/home/e_news_today/?cat=opinions/')"  class="btn btn-primary btn-group-sm btn-block">Opinions</button>
+                 <button type="button" onclick="window.open('/home/e_news_today/?cat=international/')"  class="btn btn-primary btn-group-sm btn-block">International</button>
+                 <button type="button" onclick="window.open('/home/e_news_today/?cat=circulations/')"  class="btn btn-primary btn-group-sm btn-block">Circulations</button>
+                 <button type="button" onclick="window.open('/home/e_news_today/?cat=advertisement/')"  class="btn btn-primary btn-group-sm btn-block">Advertisement</button>
+                 <!-- Inline CSS based on choices in "Settings" tab -->
+{#                 </form>#}
+                 <script>
+                    function dosomething(element) {
+                      window.log(element.value);
+                    }
+                 </script>
             </nav>
 
             </div>
               <div class="col-sm-8 text-left" >
-              <h1>Welcome to E-newsPaper</h1>
-
-                <h2>All NewsPaper List (Demo)</h2>
+{#              <h1>Welcome to E-newsPaper</h1>#}
+{##}
+{#                <h2>All NewsPaper List (Demo)</h2>#}
          {% block content %}
          {% endblock %}
 
-
               <hr>
-
             </div>
+
             <div class="col-sm-2 sidenav">
-              <div class="well">
-                <p>ADS</p>
-                  <p>ADS</p>
-                  <p>ADS</p>
-                  <p>ADS</p>
-                  <p>ADS</p>
-                  <p>ADS</p>
-                   <p>ADS</p>
-                  <p>ADS</p>
-                  <p>ADS</p>
+                <div class="well">
+                <p>Call Now for Ad !</p>
+                  <p>+880 1733 600472</p>
               </div>
               <div class="well">
-                <p>ADS</p>
-                  <p>ADS</p>
-                  <p>ADS</p>
-                  <p>ADS</p>
-                  <p>ADS</p>
-                  <p>ADS</p>
-                  <p>ADS</p>
-                  <p>ADS</p>
-                  <p>ADS</p>
-                  <p>ADS</p>
+{#              <p>Register First for All Pages</p>#}
+                  {% block sideBar %}
+                  {% endblock %}
+              </div>
 
-              </div>
             </div>
+
           </div>
         </div>
 
@@ -269,8 +265,11 @@ $(document).ready(function(){
             <h6 class="text-left"><strong>Email: </strong>joy.srijon@gmail.com</h6>
       </div>
       </div>
-
-
+{#<script type="text/javascript" src="{% static 'js/jquery-3.1.1.min.js' %}"></script>#}
+{#<script type="text/javascript" src="{% static 'js/plugin.js' %}"></script>#}
+{#{% block javascript %}#}
+{##}
+{#{% endblock javascript %}#}
 
     </body>
 </html>
